에디터에서 편하게 json 파싱가능

--- a/Assets/Script/Runtime/Metamong.Runtime.asmdef
+++ b/Assets/Script/Runtime/Metamong.Runtime.asmdef
@@ -1,15 +1,3 @@
 {
-  "name": "Metamong.Runtime",
-  "references": [
-    "Metamong.Protocol"
-  ],
-  "autoReferenced": true,
-  "includePlatforms": [],
-  "excludePlatforms": [],
-  "allowUnsafeCode": false,
-  "overrideReferences": false,
-  "precompiledReferences": [],
-  "autoReferenced": true,
-  "defineConstraints": [],
-  "versionDefines": []
+  "name": "Metamong.Runtime"
 }
