feat : componant action rule and event

--- a/Assets/Editor/Metamong.Editor.asmdef
+++ b/Assets/Editor/Metamong.Editor.asmdef
@@ -1,7 +1,8 @@
 {
   "name": "Metamong.Editor",
     "references": [
-      "Metamong.Runtime"
+      "Metamong.Runtime",
+      "Metamong.Shared"
   ],
   "includePlatforms": [
     "Editor"
